--- a/base/templates/base/feed_component.html
+++ b/base/templates/base/feed_component.html
@@ -1,14 +1,15 @@
 {% load static %}
-<div class="roomListRoom">
-  <div class="roomListRoom__header">
-    <div class="avatar avatar--small">
-      <img src="{% static 'images/chatbot.jpg' %}" />
+{% comment %} <div class="roomListRoom">
+    <div class="roomListRoom__header">
+      <div class="avatar avatar--small">
+        <img src="{% static 'images/chatbot.jpg' %}" />
+      </div>
+      <span style="margin-right: 430px; color: var(--color-main);"><b>@AI Chatbot</b></span>
     </div>
-    <span style="margin-right: 430px; color: var(--color-main);"><b>@AI Chatbot</b></span>
-  </div>
-  <div class="roomListRoom__content">
-    <a href="{% url 'chatbot'%}">Chat with AI</a>
-  </div>
+    <div class="roomListRoom__content">
+      <a href="{% url 'chatbot'%}">Chat with AI</a>
+    </div>
+  
   <div class="roomListRoom__meta">
     <a href="{% url 'chatbot' %}" class="roomListRoom__joined">
       <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
@@ -28,8 +29,7 @@
       </svg>
     </a>
   </div>
-</div>
-
+</div> {% endcomment %}
 
 
 
