--- a/templates/main.html
+++ b/templates/main.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="{% static 'styles/style.css' %}" />
-    <title>ConvoConnect - Find study partners around the world!</title>
+    <title>ConvoConnect - Find your study partners around the world!</title>
     {% block styles %}{% endblock %}
   </head>
 
