--- a/base/templates/base/activity.html
+++ b/base/templates/base/activity.html
@@ -1,4 +1,7 @@
 {% extends 'main.html' %} 
+
+{% block title %}activity{% endblock title %}
+
 {% block content %}
 <main class="layout">
   <div class="container">
