--- a/base/templates/base/update-user.html
+++ b/base/templates/base/update-user.html
@@ -1,5 +1,7 @@
 {% extends 'main.html' %}
 
+{% block title %}Edit Profile{% endblock title %}
+
 {% block content %}
 
     <main class="update-account layout">
