--- a/base/templates/base/delete.html
+++ b/base/templates/base/delete.html
@@ -1,5 +1,7 @@
 {% extends 'main.html' %}
 
+{% block title %}Delete{% endblock title %}
+
 {% block content %}
     <main class="delete-item layout">
         <div class="container">
