--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -1,5 +1,7 @@
 {% extends 'main.html' %}
 
+{% block title %}Home{% endblock title %}
+
 {% block content %}
     <main class="layout layout--3">
       <div class="container">
