--- a/base/templates/base/login_register.html
+++ b/base/templates/base/login_register.html
@@ -1,5 +1,7 @@
 {% extends 'main.html' %}
 
+{% block title %}Login{% endblock title %}
+
 {% block content %}
     <main class="auth layout">
       
