--- a/base/templates/base/profile.html
+++ b/base/templates/base/profile.html
@@ -1,5 +1,7 @@
 {% extends 'main.html' %}
 
+{% block title %}Profile{% endblock title %}
+
 {% block content %}
   <main class="profile-page layout layout--3">
     <div class="container">
