--- a/base/templates/base/room.html
+++ b/base/templates/base/room.html
@@ -1,5 +1,7 @@
 {% extends 'main.html' %}
 
+{% block title %}{{room.name}}{% endblock title %}
+
 {% block content %}
     <main class="profile-page layout layout--2">
       <div class="container">
