--- a/base/templates/base/room_form.html
+++ b/base/templates/base/room_form.html
@@ -1,5 +1,7 @@
 {% extends 'main.html' %}
 
+{% block title %}Create/Update Room{% endblock title %}
+
 {% block content %}
   <main class="create-room layout">
     <div class="container">
