--- a/base/templates/base/topics.html
+++ b/base/templates/base/topics.html
@@ -1,5 +1,7 @@
 {% extends 'main.html' %}
 
+{% block title %}Browse Topics{% endblock title %}
+
 {% block content %}
     <main class="create-room layout">
       <div class="container">
