--- a/base/templates/base/profile.html
+++ b/base/templates/base/profile.html
@@ -1,6 +1,6 @@
 {% extends 'main.html' %}
 
-{% block title %}Profile{% endblock title %}
+{% block title %}{{user.username}}{% endblock title %}
 
 {% block content %}
   <main class="profile-page layout layout--3">
