--- a/base/templates/base/activity.html
+++ b/base/templates/base/activity.html
@@ -5,7 +5,7 @@
 {% block content %}
 <main class="layout">
   <div class="container">
-    <div class="layout__box">
+    <div class="temp">
       <div class="layout__boxHeader">
         <div class="layout__boxTitle">
           <a href="{% url 'home' %}">
